=1.0.8 (1/28/2014)=
* Fix for the "Identity Not Mapped" exception - Thanks to AdmiringWorm for figuring this out!
* Added a debug setting that causes MASGAU to provide progress info that is less human-friendly, but more useful for diagnosing issues


=1.0.6=
* Resolves a potential permissions issue with updated XML files in multi-user environments
* Fixes a default versioning unit not showing up in settings
* Fixes an error caused by new "other steam library" feature
* Fixed e-mailing errors causing a WTF exception
* Restored the "no archive data" error message, was showing a "string not found" exception in its place
* Resolved an issue causing some steam games to be detected twice
* Resolved empty game version identifiers getting written to the save archive
* Added support for a revision attribute on game versions, allowing the same game to appear multiple time (for deprecating entries)
* Fixed the downloading and temp steam folders being detected as users
* Archives from previous revisions of a game profile will show up in the current revision's archive list, but will stll use the deprecated paths for restoring

=1.0.4=
* Can now detect Steam games that have been installed on other drives through Steam's new feature that lets you do what I just said.

=1.0.2=
* Implemented custom List view to overcome the limitations of the stock one
* Added interface text to explain the restore process
* Changed the detect processs to, instead of throwing an exception, choosing a game when duplicates are found, and notifying the user of that choice
* Made the duplicate game dialog suppressable for the duration of a refresh
* Made archive and game lists resizeable
* Fixed window controls not being translateable
* Added a delete archive(s) button
* Fixed games dissapearing from the game list after a restore
* Fixed the monitor not restarting after a restore
* Fixed the extract process sometimes using the install folder as a temp folder