@@ -9,6 +9,16 @@ namespace MASGAU {
     public class Archives : StaticModel<ArchiveID, Archive> {
         private Archives() { }
 
+        private static bool _IgnoreRevisionValue = true;
+        public static bool IgnoreRevisionValue
+        {
+            set
+            {
+                _IgnoreRevisionValue = value;
+            }
+        }
+
+
         public static Boolean NoArchivesDetected {
             get {
                 if (Core.settings.IsBackupPathSet) {
@@ -22,7 +32,7 @@ namespace MASGAU {
         public static IList<Archive> GetArchives(GameID id) {
             IList<Archive> archives = new List<Archive>();
             foreach (Archive archive in model.Items) {
-                if (archive.id.Game.Equals(id,true))
+                if (archive.id.Game.Equals(id,_IgnoreRevisionValue))
                     archives.Add(archive);
             }
             return archives;
