@@ -1,7 +1,8 @@
 =1.0.8 (1/28/2014)=
 * Fix for the "Identity Not Mapped" exception - Thanks to AdmiringWorm for figuring this out!
-* Added a debug setting that causes MASGAU to provide progress info that is less human-friendly, but more useful for diagnosing issues
-
+* Added a debug setting that causes MASGAU to provide progress info that is less human-friendly, but more useful for diagnosing issues.
+* Added a setting to show undetected games that have archives in the backup folder, to make restoring easier for #98
+* Changed the monitor column to disable the monitor checkbox if the game is undetected, or if it otherwise cannot be monitored (like if it's an android game).
 
 =1.0.6=
 * Resolves a potential permissions issue with updated XML files in multi-user environments
